--- a/demo/keyboard.html
+++ b/demo/keyboard.html
@@ -13,6 +13,21 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="css/keyboard.css">
+    <style>
+        button{
+            border: 0;
+        }
+        .btn{
+            width: 92%;
+            line-height: 48px;
+            background-color: #1FB9FF;
+            margin-left: 4%;
+            margin-top: 20%;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+    </style>
     <script>
     var _require_todos = [];
 
@@ -22,6 +37,8 @@
     </script>
 </head>
 <body>
+<button type="button" class="btn" id="pay_btn">立即支付</button>
+
 <script src="js/config.js" _inline _compress></script>
 <script src="js/lib/require.js"></script>
 <script>
