--- a/demo/keyboard.html
+++ b/demo/keyboard.html
@@ -27,6 +27,9 @@
             border-radius: 5px;
             font-size: 18px;
         }
+        .btn:active{
+            background-color: #108ee9;
+        }
     </style>
     <script>
     var _require_todos = [];
